chrome user dashboard scrollbar issue

--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -6884,7 +6884,7 @@ WISHLIST PAGE START
     margin-top: 40px;
     margin-bottom: 50px;
     width: 100%;
-    height: 500px;
+    min-height: 500px;
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #2a9cf5 #0b172d;
